fixed the overflowing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ a {
   text-decoration: none;
 }
 
+
 .container {
   width: 100%;
 }
@@ -92,7 +93,8 @@ a {
   padding: 2rem;
 }
 
-.left_image, .right_image {
+.left_image,
+.right_image {
   width: 55%;
 }
 
@@ -126,7 +128,6 @@ a {
 }
 .button {
   padding: 1.5rem 3.5rem;
-  /* background-color: var(--cyan-600); */
   color: var(--white);
   font-weight: bold;
   border-radius: 2rem;
@@ -179,8 +180,11 @@ a {
 }
 
 .square_image_section img {
-  width: 100%;
+  /* width: 100%; */
   border-radius: 1.2rem;
+  flex-basis: 100%; 
+  max-width: 100%; 
+  height: auto;
 }
 
 .top_layer_image,
@@ -213,6 +217,7 @@ a {
 .info_note_headers h3 {
   color: var(--cyan-600);
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 .info_note_headers h2 {
@@ -275,6 +280,11 @@ a {
 
   .cta_buttons {
     flex-direction: revert;
+  }
+
+  .square_image_section{
+    flex-wrap: nowrap;
+    width: 25%;
   }
 
   .download_button {
@@ -355,7 +365,7 @@ a {
     max-width: 22rem;
   }
 
-  .footer_button{
+  .footer_button {
     margin-bottom: revert;
   }
 }
